updated omicron role

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <i class="glyphicon glyphicon-th-large"></i>
       </button>
       <ul class="dropdown-menu" aria-labelledby="menu">
-        <li><a href="http://stephensanders.me" target="_blank">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="./me.html">Me</a></li>
         <li><a href="./projects.html">Work</a></li>
         <li><a href="./philosophy.html">Contemplations</a></li>
@@ -90,7 +90,7 @@
         <a href="https://www.linkedin.com/in/stephen-sanders-41a03b110" target="_blank" class="btn btn-social-icon btn-lg btn-linkedin">
           <i class="fa fa-linkedin"></i>
         </a>
-          
+
         <a href="https://complxalgorithm.tumblr.com" target="_blank" class="btn btn-social-icon btn-lg btn-tumblr">
             <i class="fa fa-tumblr"></i>
         </a>
@@ -116,7 +116,7 @@
         </a>
       </div>
     </div>
-      
+
     <p id="morelink" class="text-center">For a more general outline of who I am, go <a href="./me.html">here</a>.</p>
 
     <div id="banner">
@@ -161,7 +161,7 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Co-Founder &amp; CTO at <a href="https://angel.co/pollbox-1" target="_blank">pollBox</a> and Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a>.</p>
+          <p><em class="un">Affiliations</em>: Co-Founder &amp; CTO at <a href="https://angel.co/pollbox-1" target="_blank">pollBox</a> and Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a>.</p>
         <p>Junior Software Development/Philosophy double major at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a></p>
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a></p>
       </div>
