--- a/philosophy.html
+++ b/philosophy.html
@@ -124,7 +124,7 @@
 
     <center>
       <div id="philobutton">
-        <button type="submit" name="philobutton" class="btn btn-default btn-lg philsub"><a href="http://stephensanders.me/philosophy/" target="_blank">See More</a></button>
+        <button type="submit" name="philobutton" class="btn btn-default btn-lg philsub"><a href="https://philosowiseblog.wordpress.com" target="_blank">See More</a></button>
       </div>
     </center>
 
