--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </article>
 
       <div id="social" class="text-center">
-        <a href="http://stephensanders.me" target="_blank" class="btn btn-social-icon btn-lg btn-home white">
+        <a href="http://stephensanders.me" class="btn btn-social-icon btn-lg btn-home white">
           <i class="fa fa-home"></i>
         </a>
 
