--- a/cv.html
+++ b/cv.html
@@ -158,7 +158,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Co-Founder/CTO</h3>
-                            <div class="time">August 2016 - Present</div>
+                            <div class="time">August 2016 - October 2016</div>
                         </div>
                         <div class="company"><a href="https://angel.co/pollbox-1" target="_blank">pollBox</a></div>
                     </div>
