updated pdf resume, moved docs directory to assets

--- a/cv.html
+++ b/cv.html
@@ -148,7 +148,7 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
                     <p>I am currently seeking positions in the realm of web development, preferably for a start-up company as a Front-End Developer, Junior Back-End Developer, or Full-Stack Developer Intern. I someday hope to add Rust, Ruby on Rails, and Docker to my arsenal of skills and use said skills (along with the ones I already have) to become a Senior Software Engineer or Product Manager.</p>
-                    <p>For a PDF of my cv, click <a href="docs/scs-resume.pdf" target="_blank">here</a>.</p>
+                    <p>For a PDF of my cv, click <a href="./assets/docs/scs-resume.pdf" target="_blank">here</a>.</p>
                 </div><!--//summary-->
             </section><!--//section-->
 
