added stack overflow social button

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
           <i class="fa fa-linkedin"></i>
         </a>
 
+        <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
+          <i class="fa fa-stackoverflow"></i>
+        </a>
+
         <a href="https://complxalgorithm.tumblr.com" target="_blank" class="btn btn-social-icon btn-lg btn-tumblr">
             <i class="fa fa-tumblr"></i>
         </a>
