--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </a>
 
         <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
-          <i class="fa fa-stackoverflow">SO</i>
+          <p id="soicon">SO</p>
         </a>
 
         <a href="https://complxalgorithm.tumblr.com" target="_blank" class="btn btn-social-icon btn-lg btn-tumblr">
