some additions and tweaks
added embeded twitter timeline on me.html, etc.

--- a/me.html
+++ b/me.html
@@ -109,6 +109,11 @@
         <div class="info">
             <img id="mepic" src="icons/moi.jpg" alt="me" />
 
+            <div class="twitter">
+              <a class="twitter-timeline" data-width="350" data-height="500" data-theme="dark" data-link-color="#E95F28" href="https://twitter.com/ComplxAlgorithm">Tweets by ComplxAlgorithm</a>
+              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+
             <div class="mediv">
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
@@ -125,11 +130,21 @@
                         <ul>Microsoft Office 2010</ul>
                       </li>
                       <li id="melist"><small><u>College</u></small>
-                        <ul id="sublist"><em>SUNY Fredonia</em>:
-                          <li></li>
+                        <ul id="sublist"><em><u>SUNY Fredonia</u></em>:
+                          <li>C/C++</li>
+                          <li>Linux</li>
+                          <li>Perl</li>
+                          <li>Shell scripting</li>
+                          <li>HTML5/CSS3</li>
+                          <li>JavaScript</li>
+                          <li>Bootstrap</li>
+                          <li>LAMP w/ PHP</li>
                         </ul>
-                        <ul id="sublist"><em>SUNY College at Brockport</em>:
-                          <li></li>
+                        <ul id="sublist"><em><u>SUNY College at Brockport</u></em>:
+                          <li>MIPS Assembly</li>
+                          <li>C</li>
+                          <li>Computer Organization</li>
+                          <li>MySQL</li>
                         </ul>
                       </li>
                     </ul>
