added refind social button

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
             <i class="fa fa-tumblr"></i>
         </a>
 
+        <a href="https://refind.com/ComplxAlgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
+          <p>
+            <img src="https://d2qsqwbsghr38c.cloudfront.net/img/logo_128.svg?de1a7b7ab9e6bcb1cac2484bf28748d1c42092052e588033e336ae89f58b2de5" alt="R" />
+          </p>
+        </a>
+
         <a href="https://www.upwork.com/o/profiles/users/_~01633b8da61664339a/" target="_blank" class="btn btn-social-icon btn-lg btn-upwork">
           <p id="upicon">Up</p>
         </a>
