--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </a>
 
         <a href="https://refind.com/ComplxAlgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
-          <p>
-            <img src="https://d2qsqwbsghr38c.cloudfront.net/img/logo_36.svg?de1a7b7ab9e6bcb1cac2484bf28748d1c42092052e588033e336ae89f58b2de5" alt="R" />
+          <p id="refindlogo">
+            <img src="https://d2qsqwbsghr38c.cloudfront.net/img/logo_128.svg?de1a7b7ab9e6bcb1cac2484bf28748d1c42092052e588033e336ae89f58b2de5" alt="R" />
           </p>
         </a>
 
