--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
         </a>
 
         <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
-          <p id="soicon">SO</p>
+          <p>
+            <img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="SO" height="26px" width="26px" />
+          </p>
         </a>
 
         <a href="https://complxalgorithm.tumblr.com" target="_blank" class="btn btn-social-icon btn-lg btn-tumblr">
