--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <center>
       <div id="affil">
           <p><em class="un">Affiliations</em>: Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a>.</p>
-        <p>Junior Software Development/Philosophy double major at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a></p>
-        <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a></p>
+        <p>Junior Software Development/Philosophy double major at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
+        <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
     </center>
 
