made tumblr blog a subdomain and put it in the main menu

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href="./projects.html">Work</a></li>
         <li><a href="./philosophy.html">Contemplations</a></li>
         <li><a href="./cv.html">CV</a></li>
+        <li><a href="http://tumblr.stephensanders.me">Tumblr Blog</a></li>
         <li><a href="./chat.html">Chat</a></li>
         <li class="divider"></li>
         <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
@@ -95,10 +96,6 @@
           <p>
             <img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="SO" height="28px" width="28px" />
           </p>
-        </a>
-
-        <a href="https://complxalgorithm.tumblr.com" target="_blank" class="btn btn-social-icon btn-lg btn-tumblr">
-            <i class="fa fa-tumblr"></i>
         </a>
 
         <a href="https://refind.com/ComplxAlgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
