--- a/cv.html
+++ b/cv.html
@@ -62,7 +62,7 @@
         <li><a href="./projects.html">Work</a></li>
         <li><a href="./philosophy.html">Contemplations</a></li>
         <li><a href="#">CV</a></li>
-        <li><a href="http://tumblr.stephensanders.me">Tumblr Blog</a></li>
+        <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
         <li><a href="./chat.html">Chat</a></li>
         <li class="divider"></li>
         <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
