--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="./projects.html">Work</a></li>
         <li><a href="./philosophy.html">Contemplations</a></li>
         <li><a href="./cv.html">CV</a></li>
-        <li><a href="http://tumblr.stephensanders.me">Tumblr Blog</a></li>
+        <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
         <li><a href="./chat.html">Chat</a></li>
         <li class="divider"></li>
         <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
