--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                 <li><a href="#">Work</a></li>
                 <li><a href="./philosophy.html">Contemplations</a></li>
                 <li><a href="./cv.html">CV</a></li>
-                <li><a href="http://tumblr.stephensanders.me">Tumblr Blog</a></li>
+                <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
                 <li><a href="./chat.html">Chat</a></li>
                 <li class="divider"></li>
                 <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
