added facebook follow button

--- a/me.html
+++ b/me.html
@@ -107,6 +107,10 @@
             <li><a href="cv.html">CV</a></li>
         </ul>
 
+        <div class="follow">
+          <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FScsandman4&width=86&height=21&layout=button_count&size=small&show_faces=true&appId" width="86" height="21" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        </div>
+
         <div class="info">
             <img id="mepic" src="icons/moi.jpg" alt="me" />
 
