added mp3er page to main menu

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li class="divider"></li>
         <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
         <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
+        <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
         <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
         <li class="divider"></li>
         <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
