edited skills and objective sections

--- a/cv.html
+++ b/cv.html
@@ -151,7 +151,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I am currently seeking positions in the realm of web development, preferably for a start-up company as a Front-End Developer, Junior Back-End Developer, or Full-Stack Developer Intern. I someday hope to add Rust, Ruby on Rails, and Docker to my arsenal of skills and use said skills (along with the ones I already have) to become a Senior Software Engineer or Product Manager.</p>
+                    <p>I am currently seeking positions in the realm of web development, preferably for a start-up company as a Front-End Developer, Junior Back-End Developer, or Full-Stack Developer Intern. I someday hope to add Rust and/or Ruby on Rails to my arsenal of skills and use said skills (along with the ones I already have) to become a Senior Software Engineer or Product Manager.</p>
                     <p>For a PDF of my cv, click <a href="./assets/docs/scs-resume.pdf" target="_blank">here</a>.</p>
                 </div><!--//summary-->
             </section><!--//section-->
@@ -169,6 +169,7 @@
                     <div class="details">
                         <p>A completely free mobile and web application that helps talented people find gigs, make money and network with others in the field of their dreams as well as help companies and individuals recruit for their business and projects.</p>
                         <p>My primary responsibilities include acting as the lead developer of the mobile and web applications; collaborating with the CEO on matters such as funding potentiality, project plans, and adding talent to our team; and participating in the decision making of the company.</p>
+                        <p><strong>Currently on hiatus</strong></p>
                     </div>
                 </div>
 
@@ -260,7 +261,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">AngularJS/Ionic</h3>
+                        <h3 class="level-title">AngularJS</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="80%">
                             </div>
@@ -292,22 +293,22 @@
                     <div class="item">
                         <h3 class="level-title">Python &amp; Django</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="75%">
+                            <div class="level-bar-inner" data-level="55%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">C# &amp; .NET</h3>
+                        <h3 class="level-title">Node.JS &amp; <a href="http://socket.io" target="_blank">Socket.io</a></h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="75%"></div>
+                            <div class="level-bar-inner" data-level="80%"></div>
                         </div>
                     </div>
 
                     <div class="item">
                         <h3 class="level-title"><a href="http://www.typescriptlang.org/" target="_blank">TypeScript</a></h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
@@ -315,6 +316,13 @@
                         <h3 class="level-title">Git</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <h3 class="level-title">Docker</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%">
                             </div>
                         </div>
                     </div>
