--- a/cv.html
+++ b/cv.html
@@ -164,7 +164,7 @@
                             <h3 class="job-title">Co-Founder/CTO</h3>
                             <div class="time">August 2016 - October 2016</div>
                         </div>
-                        <div class="company"><a href="https://angel.co/pollbox-1" target="_blank">pollBox</a></div>
+                        <div class="company"><a href="http://pollboxapp.com" target="_blank">pollBox</a></div>
                     </div>
                     <div class="details">
                         <p>A completely free mobile and web application that helps talented people find gigs, make money and network with others in the field of their dreams as well as help companies and individuals recruit for their business and projects.</p>
