--- a/cv.html
+++ b/cv.html
@@ -298,6 +298,13 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
+					
+                    <div class="item">
+                        <h3 class="level-title">Vue.js</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="75%"></div>
+                        </div>
+                    </div>
 
                     <div class="item">
                         <h3 class="level-title">Node.JS &amp; <a href="http://socket.io" target="_blank">Socket.io</a></h3>
@@ -325,6 +332,12 @@
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="70%">
                             </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <h3 class="level-title">Jira</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%"></div>
                         </div>
                     </div>
                 </div>
