--- a/cv.html
+++ b/cv.html
@@ -108,7 +108,7 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
-                    <h4 class="degree">BS/BA in CS/Philosophy</h4>
+                    <h4 class="degree">BS in Philosophy, minor in Computer Science</h4>
                     <h5 class="meta">SUNY College at Brockport</h5>
                     <div class="time">2016 - 2017</div>
                 </div><!--//item-->
