--- a/me.html
+++ b/me.html
@@ -131,7 +131,7 @@
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm currently a junior Software Development/Philosophy double major at SUNY College at Brockport.</p>
+                    <p>I'm Stephen Sanders, and I'm currently a junior Philosophy major w/ a Computer Science minor at SUNY College at Brockport.</p>
 
                     <p>Here's what I've learned so far throughout the course of my academic career:</p>
                     <ul>
