--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li class="divider"></li>
         <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
         <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-		<li><a href="/shooly/">Shooly</a></li>
+		<li><a href="/shooly/" target="_blank">Shooly</a></li>
         <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
         <li><a href="/ropas/" target="_blank">Ropas</a></li>
         <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
@@ -175,7 +175,7 @@
     <center>
       <div id="affil">
           <p><em class="un">Affiliations</em>: Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a>.</p>
-        <p>Junior Software Development/Philosophy double major at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
+        <p>Junior Philosophy major &amps; Computer Science minor at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
     </center>
