--- a/projects.html
+++ b/projects.html
@@ -152,7 +152,7 @@
                     </ul>
                 </li><br />
                 <li>
-                    <a id="name" href="https://github.com/complxalgorithm/shooly" target="_blank">shooly</a>: Simple command line tools that I developed solely because I wanted to get some practice with the command line and shell scripting.<br /><br />
+                    <a id="name" href="./shooly/" target="_blank">shooly</a>: Simple command line tools that I developed solely because I wanted to get some practice with the command line and shell scripting.<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
                         <li>C</li>
@@ -176,7 +176,7 @@
                     </ul>
                 </li><br />
                 <li>
-                  <a id="name" href="https://github.com/complxalgorithm/ropas" target="_blank">ropas</a>: Simple rock, paper, scissors simulation web application.<br /><br />
+                  <a id="name" href="./ropas/" target="_blank">ropas</a>: Simple rock, paper, scissors simulation web application.<br /><br />
                   <p id="techused">Technologies Used:</p>
                   <ul>
                     <li>HTML5/CSS3</li>
@@ -185,7 +185,7 @@
                   </ul>
                 </li><br />
                 <li>
-                    <a id="name" href="http://ssmatchinggame.site88.net/" target="_blank">Matching Game</a>: Dead simple matching game I developed in a web programming class I took. View it <a href="https://github.com/complxalgorithm/matching_game" target="_blank">on GitHub</a>.<br /><br />
+                    <a id="name" href="./matching-game/" target="_blank">Matching Game</a>: Dead simple matching game I developed in a web programming class I took. View it <a href="https://github.com/complxalgorithm/matching_game" target="_blank">on GitHub</a>.<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
                         <li>HTML5/CSS3</li>
