a few page updates

--- a/me.html
+++ b/me.html
@@ -152,12 +152,18 @@
                           <li>JavaScript</li>
                           <li>Bootstrap</li>
                           <li>LAMP w/ PHP</li>
+                          <li>Ethics</li>
+                          <li>Epistemology</li>
+                          <li>Ancient Greek philosophy</li>
                         </ul>
                         <ul id="sublist"><em><u>SUNY College at Brockport</u></em>:
                           <li>MIPS Assembly</li>
                           <li>C</li>
                           <li>Computer Organization</li>
+                          <li>Computer Architecture</li>
                           <li>MySQL</li>
+                          <li>Logic</li>
+                          <li>Philosophy of Evolution</li>
                         </ul>
                       </li>
                     </ul>
