--- a/cv.html
+++ b/cv.html
@@ -92,7 +92,7 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <h1 class="name">Stephen C. Sanders</h1>
-                <h3 class="tagline">Full Stack Developer with 2+ years experience</h3>
+                <h3 class="tagline">Front End Developer with Full Stack ambitions</h3>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -152,7 +152,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>I am currently seeking positions in the realm of web development, preferably for a start-up company as a Front-End Developer, Junior Back-End Developer, or Full-Stack Developer Intern. I someday hope to add Rust and/or Ruby on Rails to my arsenal of skills and use said skills (along with the ones I already have) to become a Senior Software Engineer or Product Manager.</p>
+                    <p>I am a web developer specializing in front end development with 2+ years of experience with various technologies, including HTML5/CSS3 (Sass, Bootstrap), JavaScript (Angular.js, Node.js, jQuery), WordPress, and Git. I am currently seeking positions in the realm of web development, preferably for a start-up company as a Front-End Developer, Junior Back-End Developer, or Full-Stack Developer Intern. I someday hope to add Rust and/or Ruby on Rails to my arsenal of skills and use said skills (along with the ones I already have) to become a Senior Software Engineer or Product Manager.</p>
                     <p>For a PDF of my cv, click <a href="./assets/docs/scs-resume.pdf" target="_blank">here</a>.</p>
                 </div><!--//summary-->
             </section><!--//section-->
@@ -298,7 +298,7 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-					
+
                     <div class="item">
                         <h3 class="level-title">Vue.js</h3>
                         <div class="level-bar">
@@ -353,7 +353,7 @@
     <footer class="footer">
         <div class="text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+                <small class="copyright">Props to <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developing this theme.</small>
         </div><!--//container-->
     </footer><!--//footer-->
 
