--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,16 @@
                   </ul>
                 </li><br />
                 <li>
+                  <a id="name" href="./mp3er/" target="_blank">mp3er</a>: Basic web-based mp3 player I developed in my Web Programming I class. It showcases some of the basic functionality of the <a href="https://greensock.com/gsap" target="_blank">GSAP</a> JavaScript library.<br /><br />
+                  <p>Technologies Used:</p>
+                  <ul>
+                    <li>HTML5/CSS3</li>
+                    <li>JavaScript</li>
+                    <li>Bootstrap</li>
+                    <li>GSAP</li>
+                  </ul>
+                </li><br />
+                <li>
                     <a id="name" href="./matching-game/" target="_blank">Matching Game</a>: Dead simple matching game I developed in a web programming class I took. View it <a href="https://github.com/complxalgorithm/matching_game" target="_blank">on GitHub</a>.<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
