--- a/philosophy.html
+++ b/philosophy.html
@@ -47,7 +47,8 @@
             <li class="divider"></li>
             <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
             <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-			<li><a href="/shooly/" target="_blank">Shooly</a></li>
+			      <li><a href="/shooly/" target="_blank">Shooly</a></li>
+            <li><a href="/calculator/" target="_blank">calculator</a></li>
             <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
             <li><a href="/ropas/" target="_blank">Ropas</a></li>
             <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
