added calculator project
to projects.html

--- a/projects.html
+++ b/projects.html
@@ -163,6 +163,15 @@
                     </ul>
                 </li><br />
                 <li>
+                  <a id="name" href="./calculator/" target="_blank">calculator</a>: Simple, beautiful calculator web application written without any frameworks or libraries in HTML5, CSS3, and JavaScript.<br /><br />
+                  <p id="techused"></p>
+                  <ul>
+                    <li>HTML5/CSS3</li>
+                    <li>JavaScript</li>
+                    <li>Git</li>
+                  </ul>
+                </li><br />
+                <li>
                     <a id="name" href="https://github.com/complxalgorithm/socko" target="_blank">socko</a>: Native desktop chat application. I developed this because I wanted to learn how to use <a href="http://socket.io/" target="_blank">socket.io</a> and better my ability to use <a href="http://electron.atom.io/" target="_blank">Electron</a>.<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
