--- a/projects.html
+++ b/projects.html
@@ -164,7 +164,7 @@
                 </li><br />
                 <li>
                   <a id="name" href="./calculator/" target="_blank">calculator</a>: Simple, beautiful calculator web application written without any frameworks or libraries in HTML5, CSS3, and JavaScript.<br /><br />
-                  <p id="techused"></p>
+                  <p id="techused">Technologies Used:</p>
                   <ul>
                     <li>HTML5/CSS3</li>
                     <li>JavaScript</li>
