--- a/me.html
+++ b/me.html
@@ -48,7 +48,7 @@
             <li><a href="#">Me</a></li>
             <li><a href="./projects.html">Work</a></li>
             <li><a href="./philosophy.html">Contemplations</a></li>
-            <li><a href="./academic/index.html">Academic</a></li>
+            <li><a href="./academic/">Academic</a></li>
             <li><a href="./cv.html">CV</a></li>
             <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
             <li><a href="./chat.html">Chat</a></li>
