few more edits to make the start to the new redesign more readable

--- a/cv.html
+++ b/cv.html
@@ -124,7 +124,7 @@
     </div>
     
     <aside class="cv-column-right">
-      <section>
+      <section style="float:right;">
         <h4>Education</h4>
         <p>BS in Philosophy, minor in Computer Science<br />
         SUNY College at Brockport<br />
@@ -141,14 +141,14 @@
         3.7 GPA</p>
       </section><br /><br />
       
-      <section>
+      <section style="float:right;">
         <h4>Languages</h4>
         <p>English (Native)<br />
         Spanish (Professional)<br />
         German (Beginner)</p>
       </section><br /><br />
 
-      <section>
+      <section style="float:right;">
         <h4>Interests</h4>
         <p>Web Development<br />
         Systems Programming<br />
