--- a/cv.html
+++ b/cv.html
@@ -105,6 +105,13 @@
       <li role="presentation" class="active"><a href="#">CV</a></li>
     </ul>
     
+	<div style="text-align:center;">
+		<p>
+			Under reconstruction (but will probably be removed from the website). If you're truly interested in learning more about me, refer to <a href="./academic/">my academic bio subsite</a>.
+		</p>
+	</div>
+	
+	<!--
     <aside class="cv-column-left">
       <div>
         <p>Stephen C. Sanders</p>
@@ -159,7 +166,7 @@
         Writing</p>
       </section>
     </aside>    
-        
+        -->
     <div id="banner">
       <a href="https://github.com/complxalgorithm/complxalgorithm.github.io" target="_blank">View me on GitHub</a>
     </div>
