--- a/cv.html
+++ b/cv.html
@@ -106,7 +106,7 @@
     </ul>
     
 	<div style="text-align:center;">
-		<p>
+		<p style="width:33%;">
 			Under reconstruction (but will probably be removed from the website). If you're truly interested in learning more about me, refer to <a href="./academic/">my academic bio subsite</a>.
 		</p>
 	</div>
