--- a/me.html
+++ b/me.html
@@ -107,9 +107,9 @@
 
         <ul class="nav nav-tabs">
             <li role="presentation" class="active"><a href="#">Me</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="philosophy.html">Philosophy</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./philosophy.html">Philosophy</a></li>
+            <li><a href="./academic/">Academic</a></li>
         </ul>
 
         <div class="follow">
