--- a/philosophy.html
+++ b/philosophy.html
@@ -99,10 +99,10 @@
     </header>
 
     <ul style="position: absolute; float: left; top: 250px" class="nav nav-pills nav-stacked">
-        <li><a href="me.html">Me</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="./me.html">Me</a></li>
+        <li><a href="./projects.html">Projects</a></li>
         <li role="presentation" class="active"><a href="#">Philosophy</a></li>
-        <li><a href="cv.html">CV</a></li>
+        <li><a href="./academic/">Academic</a></li>
     </ul>
 
     <nav class="nav navbar">
