--- a/projects.html
+++ b/projects.html
@@ -106,10 +106,10 @@
         </header>
 
         <ul style="float: left;" class="nav nav-pills nav-stacked">
-            <li><a href="me.html">Me</a></li>
+            <li><a href="./me.html">Me</a></li>
             <li role="presentation" class="active"><a href="#">Projects</a></li>
-            <li><a href="philosophy.html">Philosophy</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="./philosophy.html">Philosophy</a></li>
+            <li><a href="./academic/">Academic</a></li>
         </ul>
 
         <div id="projs">
