--- a/me.html
+++ b/me.html
@@ -173,8 +173,8 @@
                     <article id="spec">
                         <p><strong class="un">Specialties</strong></p>
                         <ul>
-                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, jQuery, LAMP w/ PHP, WordPress, and Git.</li><br />
-                            <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>), normative ethics, the <a href="https://en.wikipedia.org/wiki/Social_contract" target="_blank">Social Contract Theory</a>, and philosophy of time.</li>
+                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, jQuery, WordPress, Linux, and Git.</li><br />
+                            <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>), normative ethics, and social philosophy.</li>
                         </ul>
                     </article>
                 </div>
