--- a/philosophy.html
+++ b/philosophy.html
@@ -42,12 +42,13 @@
             <li><a href="./projects.html">Work</a></li>
             <li><a href="#">Contemplations</a></li>
             <li><a href="./academic/">Academic</a></li>
+			<li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
             <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
             <li><a href="./chat.html">Chat</a></li>
             <li class="divider"></li>
             <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
             <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-			      <li><a href="/shooly/" target="_blank">Shooly</a></li>
+			<li><a href="/shooly/" target="_blank">Shooly</a></li>
             <li><a href="/calculator/" target="_blank">calculator</a></li>
             <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
             <li><a href="/ropas/" target="_blank">Ropas</a></li>
