edited linkedin url

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <i class="fa fa-github"></i>
         </a>
 
-        <a href="https://www.linkedin.com/in/stephen-sanders-41a03b110" target="_blank" class="btn btn-social-icon btn-lg btn-linkedin">
+        <a href="https://www.linkedin.com/in/stephencsanders" target="_blank" class="btn btn-social-icon btn-lg btn-linkedin">
           <i class="fa fa-linkedin"></i>
         </a>
 
