added viewport and edited description meta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Stephen C. Sanders</title>
 
     <meta name="author" content="Stephen C. Sanders">
-    <meta name="description" content="Full Stack Web Developer and college junior based outside of Rochester, NY">
+    <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+    <meta name=viewport content="width=device-width, initial-scale=1"/>
     <meta name="wot-verification" content="9639ea9d3abce81a6da4"/>
 
     <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
