--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
         <title>SCS's Projects</title>
 
         <meta name="author" content="Stephen C. Sanders">
-        <meta name="description" content="Full Stack Web Developer and college junior based outside of Rochester, NY">
+        <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+        <meta name=viewport content="width=device-width, initial-scale=1"/>
 
         <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
 
