added important mentions; additional tweaks

--- a/index.html
+++ b/index.html
@@ -44,17 +44,20 @@
         <li><a href="./projects.html">Work</a></li>
         <li><a href="./philosophy.html">Contemplations</a></li>
         <li><a href="./academic/">Academic</a></li>
-		<li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+		    <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
         <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
         <li><a href="./chat.html">Chat</a></li>
         <li class="divider"></li>
         <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
         <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-		<li><a href="/shooly/" target="_blank">Shooly</a></li>
+		    <li><a href="/shooly/" target="_blank">Shooly</a></li>
         <li><a href="/calculator/" target="_blank">calculator</a></li>
         <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
         <li><a href="/ropas/" target="_blank">Ropas</a></li>
         <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
+        <li class="divider"></li>
+        <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
+        <li><a href="http://0x97.io" target="_blank">0x97</a></li>
         <li class="divider"></li>
         <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
         <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
@@ -177,7 +180,7 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a>.</p>
+          <p><em class="un">Affiliations</em>: Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a> &amp; Co-Founder of <a href="http://0x97.io" target="_blank">0x97</a>.</p>
         <p>Senior Philosophy major &amp; Computer Science minor at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
