--- a/projects.html
+++ b/projects.html
@@ -50,17 +50,20 @@
                 <li><a href="#">Work</a></li>
                 <li><a href="./philosophy.html">Contemplations</a></li>
                 <li><a href="./academic/">Academic</a></li>
-				<li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+				        <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
                 <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
                 <li><a href="./chat.html">Chat</a></li>
                 <li class="divider"></li>
                 <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
                 <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-				<li><a href="/shooly/" target="_blank">Shooly</a></li>
+				        <li><a href="/shooly/" target="_blank">Shooly</a></li>
                 <li><a href="/calculator/" target="_blank">calculator</a></li>
                 <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
                 <li><a href="/ropas/" target="_blank">Ropas</a></li>
                 <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
+                <li class="divider"></li>
+                <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
+                <li><a href="http://0x97.io" target="_blank">0x97</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
                 <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
@@ -129,6 +132,20 @@
                         <li><a href="https://pages.github.com" target="_blank">GitHub Pages</a></li>
                     </ul>
                 </li><br />
+                <li>
+                  <a href="https://git.omicroninteractive.com/0x97/powerdns-admin" target="_blank">0x97 Admin</a>: Open source DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
+                  <p></p>
+                  <ul>
+                    <li>HTML/CSS3</li>
+                    <li>JavaScript (jQuery)</li>
+                    <li>Python (Flask)</li>
+                    <li>SQLite, MySQL</li>
+                    <li>Docker</li>
+                    <li>Microsoft Azure</li>
+                    <li>Git (GitLab)</li>
+                    <li>PyLint</li>
+                  </ul>
+                </li>
                 <li>
                     <a id="name" href="http://kaktusapp.com" target="_blank">Kaktus</a>: Text-to-document converter web application that I developed for a web programming class that I took in the Spring of 2016. Currently only supports .txt files, but there is continuous development on my part and additional features (e.g., Google Drive &amp; Dropbox support, a lot better support for Word documents and PDFs) should be implemented within the coming months.<br /><br />
                     <p id="techused">Technologies Used:</p>
