--- a/me.html
+++ b/me.html
@@ -50,17 +50,20 @@
             <li><a href="./projects.html">Work</a></li>
             <li><a href="./philosophy.html">Contemplations</a></li>
             <li><a href="./academic/">Academic</a></li>
-			<li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+			      <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
             <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
             <li><a href="./chat.html">Chat</a></li>
             <li class="divider"></li>
             <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
             <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-			<li><a href="/shooly/" target="_blank">Shooly</a></li>
+			      <li><a href="/shooly/" target="_blank">Shooly</a></li>
             <li><a href="/calculator/" target="_blank">calculator</a></li>
             <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
             <li><a href="/ropas/" target="_blank">Ropas</a></li>
             <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
+            <li class="divider"></li>
+            <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
+            <li><a href="http://0x97.io" target="_blank">0x97</a></li>
             <li class="divider"></li>
             <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
             <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
@@ -175,7 +178,7 @@
                     <article id="spec">
                         <p><strong class="un">Specialties</strong></p>
                         <ul>
-                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, jQuery, WordPress, Linux, and Git.</li><br />
+                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, jQuery, Python, Django, Flask, WordPress, Linux, and Git.</li><br />
                             <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>), normative ethics, and social philosophy.</li>
                         </ul>
                     </article>
