--- a/me.html
+++ b/me.html
@@ -178,7 +178,7 @@
                     <article id="spec">
                         <p><strong class="un">Specialties</strong></p>
                         <ul>
-                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, jQuery, Python, Django, Flask, WordPress, Linux, and Git.</li><br />
+                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, Vue.js, jQuery, Python, Django, Flask, WordPress, Linux, and Git.</li><br />
                             <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>), normative ethics, and social philosophy.</li>
                         </ul>
                     </article>
