some minor tweaks

--- a/me.html
+++ b/me.html
@@ -170,7 +170,7 @@
                       </li>
                     </ul>
 
-                    <p>The main activity in which I partake outside of schoolwork is development. I am the Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a>.</p>
+                    <p>The main activity in which I partake outside of schoolwork is development. I am the Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a> and Co-Founder of <a href="http://0x97.io" target="_blank">0x97</a>.</p>
 
                     <p>I am also an amateur philosopher. I've written <a href="./philosophy.html">some neat stuff</a>.</p>
 
