--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
                 </li><br />
                 <li>
                   <a href="https://git.omicroninteractive.com/0x97/powerdns-admin" target="_blank">0x97 Admin</a>: Open source DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
-                  <p></p>
+                  <p id="techused">Technologies Used:</p>
                   <ul>
                     <li>HTML/CSS3</li>
                     <li>JavaScript (jQuery)</li>
@@ -145,7 +145,7 @@
                     <li>Git (GitLab)</li>
                     <li>PyLint</li>
                   </ul>
-                </li>
+                </li><br />
                 <li>
                     <a id="name" href="http://kaktusapp.com" target="_blank">Kaktus</a>: Text-to-document converter web application that I developed for a web programming class that I took in the Spring of 2016. Currently only supports .txt files, but there is continuous development on my part and additional features (e.g., Google Drive &amp; Dropbox support, a lot better support for Word documents and PDFs) should be implemented within the coming months.<br /><br />
                     <p id="techused">Technologies Used:</p>
