couple more minor tweaks

--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
         <meta name=viewport content="width=device-width, initial-scale=1"/>
 
-        <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
+        <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/banner.css" />
@@ -81,7 +81,7 @@
 
         <script type="text/javascript" src="../src/dropdown.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script type="text/js" src="../../assets/js/jquery.min.js"></script>
+        <script type="text/js" src="./assets/js/jquery.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
