--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1"/>
     <meta name="wot-verification" content="9639ea9d3abce81a6da4"/>
 
-    <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
+    <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/banner.css" />
