--- a/me.html
+++ b/me.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
         <meta name=viewport content="width=device-width, initial-scale=1"/>
 
-        <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
+        <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/banner.css" />
@@ -122,7 +122,7 @@
         </div>
 
         <div class="info">
-            <img id="mepic" src="icons/moi.jpg" alt="me" />
+            <img id="mepic" src="./assets/icons/moi.jpg" alt="me" />
 
             <div class="twitter">
               <a class="twitter-timeline" data-width="350" data-height="500" data-theme="dark" data-link-color="#E95F28" href="https://twitter.com/ComplxAlgorithm">Tweets by ComplxAlgorithm</a>
