--- a/philosophy.html
+++ b/philosophy.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
     <meta name=viewport content="width=device-width, initial-scale=1"/>
 
-    <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
+    <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/banner.css" />
