--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
         <meta name=viewport content="width=device-width, initial-scale=1"/>
 
-        <link rel="icon" type="image/jpg" href="icons/FullSizeRender.jpg" />
+        <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/banner.css" />
@@ -133,7 +133,7 @@
                     </ul>
                 </li><br />
                 <li>
-                  <a href="https://git.omicroninteractive.com/0x97/powerdns-admin" target="_blank">0x97 Admin</a>: Open source DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
+                  <a id="name" href="https://git.omicroninteractive.com/0x97/powerdns-admin" target="_blank">0x97 Admin</a>: Open source DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
                   <p id="techused">Technologies Used:</p>
                   <ul>
                     <li>HTML/CSS3</li>
