--- a/chat.html
+++ b/chat.html
@@ -50,6 +50,7 @@
                 <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
                 <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
 				        <li><a href="/shooly/" target="_blank">Shooly</a></li>
+                <li><a href="/writer/" target="_blank">Writer</a></li>
                 <li><a href="/calculator/" target="_blank">calculator</a></li>
                 <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
                 <li><a href="/ropas/" target="_blank">Ropas</a></li>
