--- a/projects.html
+++ b/projects.html
@@ -192,19 +192,14 @@
                   </ul>
                 </li><br />
                 <li>
-                    <a id="name" href="https://github.com/complxalgorithm/socko" target="_blank">socko</a>: Native desktop chat application. I developed this because I wanted to learn how to use <a href="http://socket.io/" target="_blank">socket.io</a> and better my ability to use <a href="http://electron.atom.io/" target="_blank">Electron</a>.<br /><br />
-                    <p id="techused">Technologies Used:</p>
-                    <ul>
-                        <li>HTML5/CSS3</li>
-                        <li>JavaScript</li>
-                        <li>TypeScript</li>
-                        <li>AngularJS</li>
-                        <li>Socket.io</li>
-                        <li>Electron</li>
-                        <li>Git</li>
-                        <li>npm</li>
-                    </ul>
-                </li><br />
+                  <a id="name" href="./writer/">writer</a>: One word editor, one web-based code editor with plenty of additional features in mind for the future.<br /><br />
+                  <p id="techused">Technologies Used:</p>
+                  <ul>
+                    <li>HTML5/CSS3</li>
+                    <li>JavaScript</li>
+                    <li>Git</li>
+                  </ul>
+                </li></br />
                 <li>
                   <a id="name" href="./ropas/" target="_blank">ropas</a>: Simple rock, paper, scissors simulation web application.<br /><br />
                   <p id="techused">Technologies Used:</p>
@@ -222,6 +217,7 @@
                     <li>JavaScript</li>
                     <li>Bootstrap</li>
                     <li>GSAP</li>
+                    <li>Git</li>
                   </ul>
                 </li><br />
                 <li>
@@ -231,6 +227,7 @@
                         <li>HTML5/CSS3</li>
                         <li>JavaScript</li>
                         <li>Bootstrap</li>
+                        <li>Git</li>
                     </ul>
                 </li><br />
                 <li>
