--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/banner.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles/bootstrap-social.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -181,8 +181,8 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a> &amp; Co-Founder of <a href="http://0x97.io" target="_blank">0x97</a>.</p>
-        <p>Senior Philosophy major &amp; Computer Science minor at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
+          <p><em class="un">Affiliations</em>: Partner/Research Developer for <a href="http://quantum-seo.com" target="_blank">Quantum Seo</a>.</p>
+        <p>Senior Philosophy major w/ Anthropology &amps; Computer Science minors at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
     </center>
