--- a/me.html
+++ b/me.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/banner.css" />
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="styles/bootstrap-social.css" />
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -134,7 +134,7 @@
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ a Computer Science minor at SUNY College at Brockport.</p>
+                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ Anthropology &amps; Computer Science minors at SUNY College at Brockport.</p>
 
                     <p>Here's what I've learned so far throughout the course of my academic career:</p>
                     <ul>
@@ -158,6 +158,7 @@
                           <li>Ethics</li>
                           <li>Epistemology</li>
                           <li>Ancient Greek philosophy</li>
+                          <li>Analytic Philosophy</li>
                         </ul>
                         <ul id="sublist"><em><u>SUNY College at Brockport</u></em>:
                           <li>MIPS Assembly</li>
@@ -167,11 +168,15 @@
                           <li>MySQL</li>
                           <li>Logic</li>
                           <li>Philosophy of Evolution</li>
+                          <li>Modern Philosophy</li>
+                          <li>Political Philosophy</li>
+                          <li>Personal Identity</li>
+                          <li>Analytic Philosophy</li>
                         </ul>
                       </li>
                     </ul>
 
-                    <p>The main activity in which I partake outside of schoolwork is development. I am the Lead Developer at <a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a> and Co-Founder of <a href="http://0x97.io" target="_blank">0x97</a>.</p>
+                    <p>The main activity in which I partake outside of schoolwork is development. I am a Partner/Research Developer for <a href="http://quantum-seo.com" target="_blank">Quantum Seo</a>.</p>
 
                     <p>I am also an amateur philosopher. I've written <a href="./philosophy.html">some neat stuff</a>.</p>
 
