--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <center>
       <div id="affil">
           <p><em class="un">Affiliations</em>: Partner/Research Developer for <a href="http://quantum-seo.com" target="_blank">Quantum Seo</a>.</p>
-        <p>Senior Philosophy major w/ Anthropology &amps; Computer Science minors at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
+        <p>Senior Philosophy major w/ Anthropology &amp; Computer Science minors at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
     </center>
