--- a/me.html
+++ b/me.html
@@ -134,7 +134,7 @@
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ Anthropology &amps; Computer Science minors at SUNY College at Brockport.</p>
+                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ Anthropology &amp; Computer Science minors at SUNY College at Brockport.</p>
 
                     <p>Here's what I've learned so far throughout the course of my academic career:</p>
                     <ul>
