--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Partner/Research Developer for <a href="http://quantum-seo.com" target="_blank">Quantum Seo</a>.</p>
+          <p><em class="un">Affiliations</em>: Freelance Web Developer/Writer on <a href="https://www.upwork.com/o/profiles/users/_~01633b8da61664339a/" target="_blank">Upwork</a>.</p>
         <p>Senior Philosophy major w/ Anthropology &amp; Computer Science minors at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
