general fixes/updates

--- a/me.html
+++ b/me.html
@@ -172,11 +172,12 @@
                           <li>Political Philosophy</li>
                           <li>Personal Identity</li>
                           <li>Analytic Philosophy</li>
+                          <li>Culture Change</li>
                         </ul>
                       </li>
                     </ul>
 
-                    <p>The main activity in which I partake outside of schoolwork is development. I am a Partner/Research Developer for <a href="http://quantum-seo.com" target="_blank">Quantum Seo</a>.</p>
+                    <p>The main activities in which I partake outside of schoolwork are web development and writing.</p>
 
                     <p>I am also an amateur philosopher. I've written <a href="./philosophy.html">some neat stuff</a>.</p>
 
@@ -184,8 +185,9 @@
                     <article id="spec">
                         <p><strong class="un">Specialties</strong></p>
                         <ul>
-                            <li><strong>Development</strong>: I mainly develop for the web; my main tools are JavaScript, Node.js, AngularJS, Vue.js, jQuery, Python, Django, Flask, WordPress, Linux, and Git.</li><br />
-                            <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>), normative ethics, and social philosophy.</li>
+                            <li><strong>Development</strong>: I primarily develop for the web. I mainly use JavaScript (Node.js, AngularJS, React [Native], jQuery), HTML5/CSS3 (Sass, Bootstrap), Python (Django, Flask), WordPress, Linux, and Git.</li><br />
+                            <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>) and social philosophy.</li><br />
+                            <li><strong>Writing</strong>: I am especially interested in writing about culture, politics &amp; economics, society, and various philosophical topics (as applied to reality/current events).</li>
                         </ul>
                     </article>
                 </div>
